# rpicam-apps

./: .clang-format  .dockerignore  .gitignore  .gitlint  .pre-commit-config.yaml  CMakeLists.txt  COPYRIGHT  LICENSE.secluso  NOTICE  README.md  afterbuild.sh  bmp.cpp  build.sh  checkstyle.py  circular_output.cpp  circular_output.hpp  dng.cpp  drm_preview.cpp  drm_preview.hpp  egl_preview.cpp  egl_preview.hpp  encoder.cpp  encoder.hpp  file_output.cpp  file_output.hpp  frame_info.hpp  framecheck.ipynb  h264_encoder.cpp  h264_encoder.hpp  image.raw  install.sh  jpeg.cpp  libcamera-test.yml  libcamera_app.cpp  libcamera_app.hpp  libcamera_encoder.hpp  libcamera_hello.cpp  libcamera_jpeg.cpp  libcamera_raw.cpp  libcamera_still.cpp  (+32 more)
FormatStringAttack/: vuln.c
FormatStringVul/: formatSting.c
apps/: CMakeLists.txt  control_socket.hpp  exp.cpp  libcamera_detect.cpp  libcamera_hello.cpp  libcamera_jpeg.cpp  libcamera_prod.cpp  libcamera_raw.cpp  libcamera_still.cpp  libcamera_vid.cpp  libcamera_wizcam.cpp  meson.build  rob.cpp  rob_bmp.cpp  rpicam_detect.cpp  rpicam_gui.cpp  rpicam_hello.cpp  rpicam_jpeg.cpp  rpicam_prod.cpp  rpicam_raw.cpp  rpicam_still.cpp  rpicam_vid.cpp
assets/: acoustic_focus.json  annotate_cv.json  cv_template  hailo_classifier.json  hailo_pose_inf_fl.json  hailo_scrfd.json  hailo_yolov5_personface.json  hailo_yolov5_segmentation.json  hailo_yolov6_inference.json  hailo_yolov8_inference.json  hailo_yolov8_pose.json  hailo_yolox_inference.json  hdr.json  imx500_mobilenet.json  imx500_mobilenet_ssd.json  imx500_posenet.json  motion_detect.json  negate.json  object_blur.json  object_detect_tf.json  pose_estimation_tf.json  segmentation_tf.json  yolov5_personface.json  yolov5seg.json
cinepi/: CMakeLists.txt  cinepi_controller.cpp  cinepi_controller.hpp  cinepi_encoder.hpp  cinepi_frameinfo.hpp  cinepi_raw.cpp  cinepi_recorder.hpp  cinepi_state.hpp  dng_encoder.cpp  dng_encoder.hpp  lj92.h  raw_options.hpp  utils.hpp  yuv2rgb.hpp
core/: CMakeLists.txt  buffer_sync.cpp  buffer_sync.hpp  completed_request.hpp  dl_lib.cpp  dl_lib.hpp  dma_heaps.cpp  dma_heaps.hpp  frame_info.hpp  libcamera_app.cpp  libcamera_app.hpp  libcamera_encoder.hpp  logging.hpp  meson.build  metadata.hpp  metadata_handler.cpp  metadata_handler.hpp  options.cpp  options.hpp  post_processing_stage.cpp  post_processing_stage.hpp  post_processor.cpp  post_processor.hpp  recording_manager.hpp  rpicam_app.cpp  rpicam_app.hpp  rpicam_encoder.hpp  secondary_stream.cpp  secondary_stream.hpp  still_options.hpp  stream_info.hpp  version.cmake  version.cpp.in  version.hpp  version.py  video_options.hpp
debian/: README.Debian  README.source  changelog  control  copyright  gbp.conf  git_hash  imx500-models.install  libcamera-apps.cron.d.ex  libcamera-apps.doc-base.EX  librpicam-app-dev.install  librpicam-app1.install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  (+11 more)
encoder/: CMakeLists.txt  encoder.cpp  encoder.hpp  h264_encoder.cpp  h264_encoder.hpp  ht_encoder.hpp  libav_encoder.cpp  libav_encoder.hpp  meson.build  mjpeg_encoder.cpp  mjpeg_encoder.hpp  null_encoder.cpp  null_encoder.hpp  simple_tcp.hpp
image/: CMakeLists.txt  bmp.cpp  dng.cpp  image.hpp  jpeg.cpp  meson.build  png.cpp  yuv.cpp
output/: CMakeLists.txt  circular_output.cpp  circular_output.hpp  file_name_manager.hpp  file_output.cpp  file_output.hpp  memcached_output.cpp  memcached_output.hpp  meson.build  net_output.cpp  output.cpp  output.hpp
post_processing_stages/: CMakeLists.txt  README.md  acoustic_focus_stage.cpp  annotate_cv_stage.cpp  apParams.flatbuffers_generated.h  cv_template_stage  drc.json  face_detect_cv.json  face_detect_cv_stage.cpp  hdr_stage.cpp  histogram.cpp  histogram.hpp  imx500_mobilenet.cpp  imx500_mobilenet_ssd.cpp  imx500_posenet.cpp  imx500_post_processing_stage.cpp  imx500_post_processing_stage.hpp  meson.build  motion_detect_stage.cpp  negate_stage.cpp  object_blur_stage.cpp  object_classify_tf.json  object_classify_tf_stage.cpp  object_classify_tf_stage.json  object_detect_draw_cv_stage.cpp  object_detect_tf_stage.cpp  object_detect_udp_stage.cpp  plot_pose_cv_stage.cpp  pose_estimation_tf_stage.cpp  pose_estimation_tf_stage.json  post_processing_stage.cpp  post_processing_stage.hpp  pwl.cpp  pwl.hpp  segmentation.hpp  segmentation_tf_stage.cpp  sobel_cv.json  sobel_cv_stage.cpp  tf_stage.cpp  tf_stage.hpp
post_processing_stages/flatbuffers/: flatbuffers.h
post_processing_stages/hailo/: hailo_classifier.cpp  hailo_postprocessing_stage.cpp  hailo_postprocessing_stage.hpp  hailo_scrfd.cpp  hailo_yolo_inference.cpp  hailo_yolov5_segmentation.cpp  hailo_yolov8_pose.cpp  meson.build
post_processing_stages/imx500/: imx500_object_detection.cpp  imx500_object_inference.cpp  imx500_posenet.cpp  imx500_post_processing_stage.cpp  imx500_post_processing_stage.hpp  meson.build
preview/: CMakeLists.txt  drm_preview.cpp  egl_preview.cpp  meson.build  null_preview.cpp  preview.cpp  preview.hpp  qt_preview.cpp  qt_preview.hpp  wayland_egl_preview.cpp
subprojects/kakadujs/: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build-emscripten.sh  build.sh
subprojects/kakadujs/.devcontainer/: Dockerfile  devcontainer.json
subprojects/kakadujs/src/: CMakeLists.txt  FrameInfo.hpp  HTJ2KDecoder.hpp  HTJ2KEncoder.hpp  Point.hpp  Size.hpp  jslib.cpp
subprojects/kakadujs/test/browser/: index.html
subprojects/kakadujs/test/cpp/: CMakeLists.txt  main.cpp
subprojects/kakadujs/test/fixtures/: CT1.ll.j2c
subprojects/kakadujs/test/fixtures/j2c/: CT1.j2c  CT2.j2c  MR1.j2c  MR2.j2c  MR3.j2c  MR4.j2c  NM1.j2c  RG2.j2c  RG3.j2c  SC1.j2c  XA1.j2c
subprojects/kakadujs/test/fixtures/j2k/: US1.j2k
subprojects/kakadujs/test/fixtures/raw/: CT1.RAW  CT2.RAW  MR1.RAW  MR2.RAW  MR3.RAW  MR4.RAW  NM1.RAW  US1.RAW  VL1.RAW  VL2.RAW  VL3.RAW  VL6.RAW  XA1.RAW
subprojects/kakadujs/test/node/: index.js  package.json
utils/rpicam_ctrl/: main.cpp  meson.build  resources.qrc  rpicam-ctrl.desktop.in
utils/rpicam_vid_gui/: main.cpp  meson.build
(+61 files in other folders)
